[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://Scenes/World.gd" type="Script" id=2]
[ext_resource path="res://Objects/ShakeCamera/ShakeCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://Actors/TestDummy/TestDummy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/World_Viewport.gd" type="Script" id=5]
[ext_resource path="res://Shaders/World.gdshader" type="Shader" id=6]
[ext_resource path="res://Scripts/AINightmare.gd" type="Script" id=7]
[ext_resource path="res://Actors/Nightmare/Nightmare.tscn" type="PackedScene" id=8]
[ext_resource path="res://Objects/SoundCTRL/SoundCTRL.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Menus/MainMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Menus/PlayerDied.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Menus/PlayerWon.tscn" type="PackedScene" id=12]

[sub_resource type="ViewportTexture" id=6]
viewport_path = NodePath("Alt_World_View")

[sub_resource type="OpenSimplexNoise" id=7]
seed = 324180756
octaves = 1
period = 33.9

[sub_resource type="NoiseTexture" id=8]
width = 640
height = 380
seamless = true
noise = SubResource( 7 )

[sub_resource type="ViewportTexture" id=5]
viewport_path = NodePath("Real_World_View")

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = ExtResource( 6 )
shader_param/portal_color = Color( 0.843137, 0.482353, 0.729412, 1 )
shader_param/transit = 0.0
shader_param/in_real_world = true
shader_param/noise_texture = SubResource( 8 )
shader_param/real_world = SubResource( 5 )
shader_param/alt_world = SubResource( 6 )

[node name="World" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="AINightmare" type="Node" parent="."]
pause_mode = 1
script = ExtResource( 7 )
section_wait_time = 10.0
nightmare_sounds_path = NodePath("../Real_World_View/SoundCTRL")

[node name="PlayerController" type="Node" parent="."]
pause_mode = 1
script = ExtResource( 1 )

[node name="Real_World_View" type="Viewport" parent="."]
size = Vector2( 640, 360 )
transparent_bg = true
handle_input_locally = false
usage = 0
render_target_v_flip = true
render_target_update_mode = 3
audio_listener_enable_2d = true
script = ExtResource( 5 )
sibling_viewport_path = NodePath("../Alt_World_View")

[node name="SoundCTRL" parent="Real_World_View" groups=["keep_in_view"] instance=ExtResource( 9 )]
volume = 0.25
sounds = [ [ "hunt1", "res://Assets/Audio/SFX/nightmare_hunt_001.wav" ], [ "hunt2", "res://Assets/Audio/SFX/nightmare_hunt_002.wav" ], [ "hunt3", "res://Assets/Audio/SFX/nightmare_hunt_003.wav" ], [ "hunt4", "res://Assets/Audio/SFX/nightmare_hunt_004.wav" ] ]
sound_sets = [ [ "hunt", "hunt1,hunt2,hunt3,hunt4" ] ]

[node name="TestDummy" parent="Real_World_View" groups=["Player"] instance=ExtResource( 4 )]

[node name="ShakeCamera" parent="Real_World_View" instance=ExtResource( 3 )]
position = Vector2( 0, 180 )
current = true
lock_to_y = true

[node name="Alt_World_View" type="Viewport" parent="."]
size = Vector2( 640, 360 )
transparent_bg = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 3
script = ExtResource( 5 )
sibling_viewport_path = NodePath("../Real_World_View")

[node name="ShakeCamera" parent="Alt_World_View" instance=ExtResource( 3 )]
position = Vector2( 0, 180 )
current = true
lock_to_y = true
trauma_decay = 0.3
trauma_max_offset = Vector2( 5, 5 )
trauma_max_roll = 0.4

[node name="Nightmare" parent="Alt_World_View" instance=ExtResource( 8 )]

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="Canvas"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameView" type="ColorRect" parent="Canvas"]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" parent="Canvas" instance=ExtResource( 10 )]

[node name="PlayerDied" parent="Canvas" instance=ExtResource( 11 )]

[node name="PlayerWon" parent="Canvas" instance=ExtResource( 12 )]

[connection signal="player_as_ai" from="." to="PlayerController" method="_on_player_as_ai"]
[connection signal="show_ui" from="." to="Canvas/MainMenu" method="_on_show_ui"]
[connection signal="show_ui" from="." to="Canvas/PlayerDied" method="_on_show_ui"]
[connection signal="show_ui" from="." to="Canvas/PlayerWon" method="_on_show_ui"]
[connection signal="zone_changed" from="." to="AINightmare" method="_on_World_zone_changed"]
[connection signal="player_died" from="PlayerController" to="." method="_on_player_died"]
[connection signal="start_game" from="Canvas/MainMenu" to="." method="_on_start_game"]
[connection signal="game_over" from="Canvas/PlayerDied" to="." method="_on_game_over"]
[connection signal="game_over" from="Canvas/PlayerWon" to="." method="_on_game_over"]
